@@ -20,20 +20,17 @@ package com.graphhopper;
 import com.graphhopper.config.CHProfile;
 import com.graphhopper.config.LMProfile;
 import com.graphhopper.config.Profile;
+import com.graphhopper.config.TurnCostsConfig;
 import com.graphhopper.reader.ReaderWay;
 import com.graphhopper.reader.dem.SRTMProvider;
 import com.graphhopper.reader.dem.SkadiProvider;
-import com.graphhopper.routing.ev.EdgeIntAccess;
-import com.graphhopper.routing.ev.EncodedValueLookup;
-import com.graphhopper.routing.ev.RoadEnvironment;
-import com.graphhopper.routing.ev.Subnetwork;
+import com.graphhopper.routing.TestProfiles;
+import com.graphhopper.routing.ev.*;
 import com.graphhopper.routing.util.AllEdgesIterator;
 import com.graphhopper.routing.util.DefaultSnapFilter;
 import com.graphhopper.routing.util.EdgeFilter;
 import com.graphhopper.routing.util.countryrules.CountryRuleFactory;
-import com.graphhopper.routing.util.parsers.DefaultTagParserFactory;
 import com.graphhopper.routing.util.parsers.OSMRoadEnvironmentParser;
-import com.graphhopper.routing.util.parsers.TagParser;
 import com.graphhopper.routing.weighting.Weighting;
 import com.graphhopper.search.KVStorage;
 import com.graphhopper.storage.IntsRef;
@@ -65,6 +62,7 @@ import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static com.graphhopper.json.Statement.If;
+import static com.graphhopper.json.Statement.Op.LIMIT;
 import static com.graphhopper.json.Statement.Op.MULTIPLY;
 import static com.graphhopper.util.GHUtility.createCircle;
 import static com.graphhopper.util.GHUtility.createRectangle;
@@ -111,12 +109,10 @@ public class GraphHopperTest {
             DIJKSTRA_BI + ",true,51"
     })
     public void testMonacoDifferentAlgorithms(String algo, boolean withCH, int expectedVisitedNodes) {
-        final String vehicle = "car";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile("profile").setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessAndSpeed("profile", "car")).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler()
                 .setCHProfiles(new CHProfile("profile"));
@@ -148,12 +144,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoWithInstructions() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setCustomModel(new CustomModel().setDistanceInfluence(70d)).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -161,7 +156,7 @@ public class GraphHopperTest {
                 setAlgorithm(ASTAR).setProfile(profile));
 
         // identify the number of counts to compare with CH foot route
-        assertEquals(1022, rsp.getHints().getLong("visited_nodes.sum", 0));
+        assertEquals(1033, rsp.getHints().getLong("visited_nodes.sum", 0));
 
         ResponsePath res = rsp.getBest();
         assertEquals(3535, res.getDistance(), 1);
@@ -201,12 +196,11 @@ public class GraphHopperTest {
     @Test
     public void withoutInstructions() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -236,11 +230,11 @@ public class GraphHopperTest {
     @Test
     public void testUTurnInstructions() {
         final String profile = "profile";
-        final String vehicle = "car";
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(true).putHint(U_TURN_COSTS, 20));
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car").
+                        setTurnCostsConfig(new TurnCostsConfig(List.of("motorcar", "motor_vehicle"), 20)));
         hopper.importOrLoad();
         Translation tr = hopper.getTranslationMap().getWithFallBack(Locale.US);
 
@@ -291,8 +285,7 @@ public class GraphHopperTest {
         }
     }
 
-    private void testImportCloseAndLoad(boolean ch, boolean lm) {
-        final String vehicle = "foot";
+    private void testImportCloseAndLoad(boolean ch, boolean lm, boolean sort) {
         final String profileName = "profile";
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
@@ -306,10 +299,10 @@ public class GraphHopperTest {
                 new Coordinate(7.4198, 43.7355),
                 new Coordinate(7.4207, 43.7344),
                 new Coordinate(7.4174, 43.7345)}));
-        CustomModel customModel = new CustomModel().setDistanceInfluence(0d);
+        Profile profile = TestProfiles.accessSpeedAndPriority(profileName, "foot");
+        CustomModel customModel = profile.getCustomModel();
         customModel.getPriority().add(If("in_area51", MULTIPLY, "0.1"));
         customModel.getAreas().getFeatures().add(area51Feature);
-        Profile profile = new Profile(profileName).setCustomModel(customModel).setVehicle(vehicle);
         hopper.setProfiles(profile);
 
         if (ch) {
@@ -390,33 +383,37 @@ public class GraphHopperTest {
 
     @Test
     public void testImportThenLoadCH() {
-        testImportCloseAndLoad(true, false);
+        testImportCloseAndLoad(true, false, false);
     }
 
     @Test
     public void testImportThenLoadLM() {
-        testImportCloseAndLoad(false, true);
+        testImportCloseAndLoad(false, true, false);
     }
 
     @Test
     public void testImportThenLoadCHLM() {
-        testImportCloseAndLoad(true, true);
+        testImportCloseAndLoad(true, true, false);
+    }
+
+    @Test
+    public void testImportThenLoadCHLMAndSort() {
+        testImportCloseAndLoad(true, true, true);
     }
 
     @Test
     public void testImportThenLoadFlexible() {
-        testImportCloseAndLoad(false, false);
+        testImportCloseAndLoad(false, false, false);
     }
 
     @Test
     public void testAlternativeRoutes() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -444,12 +441,11 @@ public class GraphHopperTest {
     @Test
     public void testAlternativeRoutesBike() {
         final String profile = "profile";
-        final String vehicle = "bike";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "bike"));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest(50.028917, 11.496506, 49.985228, 11.600876).
@@ -470,12 +466,11 @@ public class GraphHopperTest {
     @Test
     public void testAlternativeRoutesCar() {
         final String profile = "profile";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car"));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest(50.023513, 11.548862, 49.969441, 11.537876).
@@ -497,18 +492,16 @@ public class GraphHopperTest {
     @Test
     public void testPointHint() {
         final String profile = "profile";
-        final String vehicle = "car";
-
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(LAUF).
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+                setEncodedValuesString("car_access,car_average_speed").
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car"));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest(49.46553, 11.154669, 49.465244, 11.152577).
                 setProfile(profile);
-
         req.setPointHints(new ArrayList<>(asList("Laufamholzstraße, 90482, Nürnberg, Deutschland", "")));
         GHResponse rsp = hopper.route(req);
         assertFalse(rsp.hasErrors(), rsp.getErrors().toString());
@@ -538,7 +531,7 @@ public class GraphHopperTest {
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAUTZEN).
-                setProfiles(new Profile(profile).setVehicle("car"));
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car"));
         hopper.setMinNetworkSize(0);
         hopper.importOrLoad();
 
@@ -548,6 +541,7 @@ public class GraphHopperTest {
         assertFalse(rsp.hasErrors(), rsp.getErrors().toString());
         assertEquals("keep right and take B 96 toward Bautzen-West, Hoyerswerda",
                 rsp.getBest().getInstructions().get(1).getTurnDescription(tr));
+        assertEquals("Bautzen-West", rsp.getBest().getInstructions().get(1).getExtraInfoJSON().get("motorway_junction"));
         assertEquals("turn left onto Hoyerswerdaer Straße and drive toward Hoyerswerda, Kleinwelka",
                 rsp.getBest().getInstructions().get(2).getTurnDescription(tr));
 
@@ -559,14 +553,14 @@ public class GraphHopperTest {
     @Test
     public void testNorthBayreuthAccessDestination() {
         final String profile = "profile";
-        final String vehicle = "car";
+
+        Profile p = TestProfiles.accessAndSpeed(profile, "car");
+        p.getCustomModel().addToPriority(If("road_access == DESTINATION", MULTIPLY, ".1"));
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).
-                        setCustomModel(new CustomModel().addToPriority(If("road_access == DESTINATION", MULTIPLY, ".1"))).
-                        setVehicle(vehicle));
+                setProfiles(p);
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest(49.985307, 11.50628, 49.985731, 11.507465).
@@ -580,12 +574,11 @@ public class GraphHopperTest {
     @Test
     public void testNorthBayreuthBlockedEdges() {
         final String profile = "profile";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car"));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest(49.985272, 11.506151, 49.986107, 11.507202).
@@ -693,18 +686,16 @@ public class GraphHopperTest {
 
     @Test
     public void testCustomModel() {
-        final String vehicle = "car";
         final String customCar = "custom_car";
         final String emptyCar = "empty_car";
-        CustomModel customModel = new CustomModel();
-        customModel.addToSpeed(If("road_class == TERTIARY || road_class == TRACK", MULTIPLY, "0.1"));
+        Profile p1 = TestProfiles.accessAndSpeed(customCar, "car");
+        p1.getCustomModel().addToSpeed(If("road_class == TERTIARY || road_class == TRACK", MULTIPLY, "0.1"));
+        Profile p2 = TestProfiles.accessAndSpeed(emptyCar, "car");
         GraphHopper hopper = new GraphHopper().
+                setEncodedValuesString("car_average_speed,car_access").
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(
-                        new Profile(emptyCar).setCustomModel(new CustomModel()).setVehicle(vehicle),
-                        new Profile(customCar).setCustomModel(customModel).setVehicle(vehicle)
-                ).
+                setProfiles(p1, p2).
                 importOrLoad();
 
         // standard car route
@@ -712,7 +703,7 @@ public class GraphHopperTest {
         // the custom car takes a detour in the north to avoid tertiary roads
         assertDistance(hopper, customCar, null, 13223);
         // we can achieve the same by using the empty profile and using a client-side model, we just need to copy the model because of the internal flag
-        assertDistance(hopper, emptyCar, new CustomModel(customModel), 13223);
+        assertDistance(hopper, emptyCar, new CustomModel(p1.getCustomModel()), 13223);
         // now we prevent using unclassified roads as well and the route goes even further north
         CustomModel strictCustomModel = new CustomModel().addToSpeed(
                 If("road_class == TERTIARY || road_class == TRACK || road_class == UNCLASSIFIED", MULTIPLY, "0.1"));
@@ -740,12 +731,13 @@ public class GraphHopperTest {
     @Test
     public void testMonacoVia() {
         final String profile = "profile";
-        final String vehicle = "foot";
+        Profile p = TestProfiles.accessSpeedAndPriority(profile, "foot");
+        p.getCustomModel().setDistanceInfluence(10_000d);
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setCustomModel(new CustomModel().setDistanceInfluence(10_000d)).setVehicle(vehicle)).
+                setProfiles(p).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -826,12 +818,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoPathDetails() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -858,12 +849,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoEnforcedDirection() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -906,11 +896,10 @@ public class GraphHopperTest {
     @Test
     public void testHeading() {
         final String profile = "profile";
-        final String vehicle = "car";
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -936,12 +925,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoMaxVisitedNodes() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -953,7 +941,7 @@ public class GraphHopperTest {
 
         assertTrue(rsp.hasErrors());
         Throwable throwable = rsp.getErrors().get(0);
-        assertTrue(throwable instanceof MaximumNodesExceededException);
+        assertInstanceOf(MaximumNodesExceededException.class, throwable);
         Object nodesDetail = ((MaximumNodesExceededException) throwable).getDetails().get(MaximumNodesExceededException.NODES_KEY);
         assertEquals(5, nodesDetail);
 
@@ -966,12 +954,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoNonChMaxWaypointDistance() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -998,12 +985,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoNonChMaxWaypointDistanceMultiplePoints() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -1037,12 +1023,11 @@ public class GraphHopperTest {
     @Test
     public void testMonacoStraightVia() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -1072,12 +1057,11 @@ public class GraphHopperTest {
     @Test
     public void testSRTMWithInstructions() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true);
 
         hopper.setElevationProvider(new SRTMProvider(DIR));
@@ -1134,30 +1118,29 @@ public class GraphHopperTest {
     @ValueSource(booleans = {true, false})
     public void testSRTMWithTunnelInterpolation(boolean withTunnelInterpolation) {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true);
 
         if (!withTunnelInterpolation) {
-            hopper.setTagParserFactory(new DefaultTagParserFactory() {
+            hopper.setImportRegistry(new DefaultImportRegistry() {
                 @Override
-                public TagParser create(EncodedValueLookup lookup, String name, PMap properties) {
-                    TagParser parser = super.create(lookup, name, properties);
-                    if (name.equals("road_environment"))
-                        parser = new OSMRoadEnvironmentParser(lookup.getEnumEncodedValue(RoadEnvironment.KEY, RoadEnvironment.class)) {
-                            @Override
-                            public void handleWayTags(int edgeId, EdgeIntAccess edgeIntAccess, ReaderWay readerWay, IntsRef relationFlags) {
-                                // do not change RoadEnvironment to avoid triggering tunnel interpolation
-                            }
-                        };
-                    return parser;
+                public ImportUnit createImportUnit(String name) {
+                    ImportUnit importUnit = super.createImportUnit(name);
+                    if ("road_environment".equals(name))
+                        importUnit = ImportUnit.create(name, props -> RoadEnvironment.create(),
+                                (lookup, props) -> new OSMRoadEnvironmentParser(lookup.getEnumEncodedValue(RoadEnvironment.KEY, RoadEnvironment.class)) {
+                                    @Override
+                                    public void handleWayTags(int edgeId, EdgeIntAccess edgeIntAccess, ReaderWay readerWay, IntsRef relationFlags) {
+                                        // do not change RoadEnvironment to avoid triggering tunnel interpolation
+                                    }
+                                });
+                    return importUnit;
                 }
             });
-            hopper.setEncodedValuesString("road_environment");
         }
 
         hopper.setElevationProvider(new SRTMProvider(DIR));
@@ -1199,13 +1182,12 @@ public class GraphHopperTest {
     @Test
     public void testSRTMWithLongEdgeSampling() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
                 setStoreOnFlush(true).
-                setProfiles(new Profile("profile").setVehicle(vehicle));
+                setProfiles(TestProfiles.accessSpeedAndPriority("profile", "foot"));
         hopper.getRouterConfig().setElevationWayPointMaxDistance(1.);
         hopper.getReaderConfig().
                 setElevationMaxWayPointDistance(1.).
@@ -1246,12 +1228,11 @@ public class GraphHopperTest {
     @Test
     public void testSkadiElevationProvider() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true);
 
         hopper.setElevationProvider(new SkadiProvider(DIR));
@@ -1278,8 +1259,8 @@ public class GraphHopperTest {
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(KREMS).
                 setProfiles(
-                        new Profile(footProfile).setVehicle("foot"),
-                        new Profile(bikeProfile).setVehicle("bike")).
+                        TestProfiles.accessSpeedAndPriority(footProfile, "foot"),
+                        TestProfiles.accessSpeedAndPriority(bikeProfile, "bike")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -1321,15 +1302,13 @@ public class GraphHopperTest {
     public void testRoundaboutInstructionsWithCH() {
         final String profile1 = "my_profile";
         final String profile2 = "your_profile";
-        final String vehicle1 = "car";
-        final String vehicle2 = "bike";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
                 setProfiles(Arrays.asList(
-                        new Profile(profile1).setVehicle(vehicle1),
-                        new Profile(profile2).setVehicle(vehicle2))
+                        TestProfiles.accessAndSpeed(profile1, "car"),
+                        TestProfiles.accessSpeedAndPriority(profile2, "bike"))
                 ).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler().setCHProfiles(
@@ -1367,15 +1346,13 @@ public class GraphHopperTest {
     public void testCircularJunctionInstructionsWithCH() {
         String profile1 = "profile1";
         String profile2 = "profile2";
-        String vehicle1 = "car";
-        String vehicle2 = "bike";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BERLIN).
                 setProfiles(
-                        new Profile(profile1).setVehicle(vehicle1),
-                        new Profile(profile2).setVehicle(vehicle2)
+                        TestProfiles.accessAndSpeed(profile1, "car"),
+                        TestProfiles.accessSpeedAndPriority(profile2, "bike")
                 ).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler().setCHProfiles(
@@ -1400,8 +1377,8 @@ public class GraphHopperTest {
         final String bikeProfile = "bike_profile";
         final String carProfile = "car_profile";
         List<Profile> profiles = asList(
-                new Profile(bikeProfile).setVehicle("bike"),
-                new Profile(carProfile).setVehicle("car")
+                TestProfiles.accessSpeedAndPriority(bikeProfile, "bike"),
+                TestProfiles.accessAndSpeed(carProfile, "car")
         );
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
@@ -1452,12 +1429,11 @@ public class GraphHopperTest {
 
     private void executeCHFootRoute() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
         hopper.importOrLoad();
@@ -1480,12 +1456,11 @@ public class GraphHopperTest {
     @Test
     public void testRoundTour() {
         final String profile = "profile";
-        final String vehicle = "foot";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessSpeedAndPriority(profile, "foot")).
                 setStoreOnFlush(true).
                 importOrLoad();
 
@@ -1509,13 +1484,11 @@ public class GraphHopperTest {
     @Test
     public void testPathDetails1216() {
         final String profile = "profile";
-        final String vehicle = "car";
-
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car"));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest().
@@ -1535,12 +1508,11 @@ public class GraphHopperTest {
     @Test
     public void testPathDetailsSamePoint() {
         final String profile = "profile";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+                setProfiles(TestProfiles.constantSpeed(profile));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest().
@@ -1557,12 +1529,11 @@ public class GraphHopperTest {
     @Test
     public void testFlexMode_631() {
         final String profile = "car_profile";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car")).
                 setStoreOnFlush(true);
 
         hopper.getCHPreparationHandler().
@@ -1620,14 +1591,16 @@ public class GraphHopperTest {
         final String profile1 = "p1";
         final String profile2 = "p2";
         final String profile3 = "p3";
+        Profile p1 = TestProfiles.accessAndSpeed(profile1, "car");
+        Profile p2 = TestProfiles.accessAndSpeed(profile2, "car");
+        Profile p3 = TestProfiles.accessAndSpeed(profile3, "car");
+        p1.getCustomModel().setDistanceInfluence(70d);
+        p2.getCustomModel().setDistanceInfluence(100d);
+        p3.getCustomModel().setDistanceInfluence(150d);
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(
-                        new Profile(profile1).setCustomModel(new CustomModel().setDistanceInfluence(70d)).setVehicle("car"),
-                        new Profile(profile2).setCustomModel(new CustomModel().setDistanceInfluence(100d)).setVehicle("car"),
-                        new Profile(profile3).setCustomModel(new CustomModel().setDistanceInfluence(150d)).setVehicle("car")
-                ).
+                setProfiles(p1, p2, p3).
                 setStoreOnFlush(true);
 
         hopper.getLMPreparationHandler().
@@ -1662,12 +1635,14 @@ public class GraphHopperTest {
 
     @Test
     public void testLMConstraints() {
+        Profile p1 = TestProfiles.accessAndSpeed("p1", "car");
+        Profile p2 = TestProfiles.accessAndSpeed("p2", "car");
+        p1.getCustomModel().setDistanceInfluence(100d);
+        p2.getCustomModel().setDistanceInfluence(100d);
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(
-                        new Profile("p1").setCustomModel(new CustomModel().setDistanceInfluence(100d)).setVehicle("car"),
-                        new Profile("p2").setCustomModel(new CustomModel().setDistanceInfluence(100d)).setVehicle("car")).
+                setProfiles(p1, p2).
                 setStoreOnFlush(true);
 
         hopper.getLMPreparationHandler().setLMProfiles(new LMProfile("p1"));
@@ -1709,20 +1684,17 @@ public class GraphHopperTest {
 
     @Test
     public void testCreateWeightingHintsMerging() {
-        final String profile = "profile";
-        final String vehicle = "mtb";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(true).putHint(U_TURN_COSTS, 123));
+                setProfiles(TestProfiles.accessSpeedAndPriority("profile", "mtb").setTurnCostsConfig(new TurnCostsConfig(List.of("bicycle"), 123)));
         hopper.importOrLoad();
 
         // if we do not pass u_turn_costs with the request hints we get those from the profile
         Weighting w = hopper.createWeighting(hopper.getProfiles().get(0), new PMap());
         assertEquals(123.0, w.calcTurnWeight(5, 6, 5));
 
-        // we can overwrite the u_turn_costs given in the profile
+        // we can no longer overwrite the u_turn_costs
         w = hopper.createWeighting(hopper.getProfiles().get(0), new PMap().putObject(U_TURN_COSTS, 46));
         assertEquals(46.0, w.calcTurnWeight(5, 6, 5));
     }
@@ -1731,14 +1703,13 @@ public class GraphHopperTest {
     public void testPreparedProfileNotAvailable() {
         final String profile1 = "fast_profile";
         final String profile2 = "short_fast_profile";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
                 setProfiles(
-                        new Profile(profile1).setVehicle(vehicle),
-                        new Profile(profile2).setVehicle(vehicle)
+                        TestProfiles.accessAndSpeed(profile1, "car"),
+                        TestProfiles.accessAndSpeed(profile2, "car")
                 ).
                 setStoreOnFlush(true);
 
@@ -1778,23 +1749,21 @@ public class GraphHopperTest {
     @Test
     public void testDisablingLM() {
         // setup GH with LM preparation but no CH preparation
-        final String profile = "profile";
-        final String vehicle = "car";
+
         // note that the pure presence of the bike profile leads to 'ghost' junctions with the bike network even for
         // cars such that the number of visited nodes depends on the bike profile added here or not, #1910
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle),
-                        new Profile("bike").setVehicle("bike")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true);
         hopper.getLMPreparationHandler().
-                setLMProfiles(new LMProfile(profile).setMaximumLMWeight(2000));
+                setLMProfiles(new LMProfile("car").setMaximumLMWeight(2000));
         hopper.importOrLoad();
 
         // we can switch LM on/off
         GHRequest req = new GHRequest(43.727687, 7.418737, 43.74958, 7.436566).
-                setProfile(profile);
+                setProfile("car");
 
         req.putHint(Landmark.DISABLE, false);
         GHResponse res = hopper.route(req);
@@ -1808,15 +1777,12 @@ public class GraphHopperTest {
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
     public void testCompareAlgos(boolean turnCosts) {
-        final String profile = "car";
-        final String vehicle = "car";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(turnCosts));
-        hopper.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
-        hopper.getLMPreparationHandler().setLMProfiles(new LMProfile(profile));
+                setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(turnCosts ? TurnCostsConfig.car() : null));
+        hopper.getCHPreparationHandler().setCHProfiles(new CHProfile("car"));
+        hopper.getLMPreparationHandler().setLMProfiles(new LMProfile("car"));
         hopper.importOrLoad();
 
         long seed = System.nanoTime();
@@ -1828,7 +1794,7 @@ public class GraphHopperTest {
             double lon1 = bounds.minLon + rnd.nextDouble() * (bounds.maxLon - bounds.minLon);
             double lon2 = bounds.minLon + rnd.nextDouble() * (bounds.maxLon - bounds.minLon);
             GHRequest req = new GHRequest(lat1, lon1, lat2, lon2);
-            req.setProfile(profile);
+            req.setProfile("car");
             req.getHints().putObject(CH.DISABLE, false).putObject(Landmark.DISABLE, true);
             ResponsePath pathCH = hopper.route(req).getBest();
             req.getHints().putObject(CH.DISABLE, true).putObject(Landmark.DISABLE, false);
@@ -1853,18 +1819,15 @@ public class GraphHopperTest {
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
     public void testAStarCHBug(boolean turnCosts) {
-        final String profile = "car";
-        final String vehicle = "car";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(turnCosts));
-        hopper.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
+                setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(turnCosts ? TurnCostsConfig.car() : null));
+        hopper.getCHPreparationHandler().setCHProfiles(new CHProfile("car"));
         hopper.importOrLoad();
 
         GHRequest req = new GHRequest(55.821744463888116, 37.60380604129401, 55.82608197039734, 37.62055856655137);
-        req.setProfile(profile);
+        req.setProfile("car");
         req.getHints().putObject(CH.DISABLE, false);
         ResponsePath pathCH = hopper.route(req).getBest();
         req.getHints().putObject(CH.DISABLE, true);
@@ -1878,15 +1841,12 @@ public class GraphHopperTest {
 
     @Test
     public void testIssue1960() {
-        final String profile = "car";
-        final String vehicle = "car";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(true));
-        hopper.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
-        hopper.getLMPreparationHandler().setLMProfiles(new LMProfile(profile));
+                setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car()));
+        hopper.getCHPreparationHandler().setCHProfiles(new CHProfile("car"));
+        hopper.getLMPreparationHandler().setLMProfiles(new LMProfile("car"));
 
         hopper.importOrLoad();
 
@@ -1912,15 +1872,15 @@ public class GraphHopperTest {
     public void testTurnCostsOnOff() {
         final String profile1 = "profile_no_turn_costs";
         final String profile2 = "profile_turn_costs";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
                 // add profile with turn costs first when no flag encoder is explicitly added
                         setProfiles(
-                        new Profile(profile2).setVehicle(vehicle).setTurnCosts(true).putHint(U_TURN_COSTS, 30),
-                        new Profile(profile1).setVehicle(vehicle).setTurnCosts(false)
+                        TestProfiles.accessAndSpeed(profile2, "car").
+                                setTurnCostsConfig(new TurnCostsConfig(List.of("motorcar", "motor_vehicle"), 30)),
+                        TestProfiles.accessAndSpeed(profile1, "car")
                 ).
                 setStoreOnFlush(true);
         hopper.importOrLoad();
@@ -1942,14 +1902,13 @@ public class GraphHopperTest {
     public void testTurnCostsOnOffCH() {
         final String profile1 = "profile_turn_costs";
         final String profile2 = "profile_no_turn_costs";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(Arrays.asList(
-                        new Profile(profile1).setVehicle(vehicle).setTurnCosts(true),
-                        new Profile(profile2).setVehicle(vehicle).setTurnCosts(false)
+                setProfiles(List.of(
+                        TestProfiles.accessAndSpeed(profile1, "car").setTurnCostsConfig(TurnCostsConfig.car()),
+                        TestProfiles.accessAndSpeed(profile2, "car")
                 )).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler().setCHProfiles(
@@ -1968,12 +1927,11 @@ public class GraphHopperTest {
     @Test
     public void testCHOnOffWithTurnCosts() {
         final String profile = "my_car";
-        final String vehicle = "car";
 
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(true)).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car").setTurnCostsConfig(TurnCostsConfig.car())).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler()
                 .setCHProfiles(new CHProfile(profile));
@@ -2002,9 +1960,10 @@ public class GraphHopperTest {
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(Arrays.asList(
-                        new Profile(profile1).setVehicle("car").setTurnCosts(true),
-                        new Profile(profile2).setVehicle("car").setTurnCosts(false))).
+                setProfiles(List.of(
+                        TestProfiles.accessAndSpeed(profile1, "car").setTurnCostsConfig(TurnCostsConfig.car()),
+                        TestProfiles.accessAndSpeed(profile2, "car")
+                )).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler()
                 // we only do the CH preparation for the profile without turn costs
@@ -2034,22 +1993,21 @@ public class GraphHopperTest {
     }
 
     @Test
-    public void testEncoderWithTurnCostSupport_stillAllows_nodeBasedRouting() {
+    public void testProfileWithTurnCostSupport_stillAllows_nodeBasedRouting() {
         // see #1698
-        final String profile = "profile";
-        final String vehicle = "foot";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MOSCOW).
-                setProfiles(new Profile(profile).setVehicle(vehicle),
-                        new Profile("car").setVehicle("car").setTurnCosts(true));
+                setProfiles(
+                        TestProfiles.accessSpeedAndPriority("foot"),
+                        TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car())
+                );
 
         hopper.importOrLoad();
         GHPoint p = new GHPoint(55.813357, 37.5958585);
         GHPoint q = new GHPoint(55.811042, 37.594689);
         GHRequest req = new GHRequest(p, q);
-        req.setProfile(profile);
+        req.setProfile("foot");
         GHResponse rsp = hopper.route(req);
         assertEquals(0, rsp.getErrors().size(), "there should not be an error, but was: " + rsp.getErrors());
     }
@@ -2065,8 +2023,8 @@ public class GraphHopperTest {
                 setOSMFile(ESSEN).
                 setMinNetworkSize(50).
                 setProfiles(
-                        new Profile("foot").setVehicle("foot"),
-                        new Profile("car").setVehicle("car").setTurnCosts(true)
+                        TestProfiles.accessSpeedAndPriority("foot"),
+                        TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car())
                 );
 
         hopper.importOrLoad();
@@ -2096,7 +2054,7 @@ public class GraphHopperTest {
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
                 setMinNetworkSize(0).
-                setProfiles(new Profile("bike").setVehicle("bike"));
+                setProfiles(TestProfiles.accessSpeedAndPriority("bike"));
 
         hopper.importOrLoad();
         GHRequest req = new GHRequest(new GHPoint(49.98021, 11.50730), new GHPoint(49.98026, 11.50795));
@@ -2120,7 +2078,7 @@ public class GraphHopperTest {
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
                 setMinNetworkSize(50).
-                setProfiles(new Profile("car").setVehicle("car"));
+                setProfiles(TestProfiles.constantSpeed("bike"));
         hopper.importOrLoad();
         int count = 0;
         AllEdgesIterator iter = hopper.getBaseGraph().getAllEdges();
@@ -2134,9 +2092,9 @@ public class GraphHopperTest {
         GraphHopper h = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile("my_profile").setVehicle("car").setTurnCosts(true));
+                setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car()));
         h.getCHPreparationHandler()
-                .setCHProfiles(new CHProfile("my_profile"));
+                .setCHProfiles(new CHProfile("car"));
         h.importOrLoad();
 
         // depending on the curbside parameters we take very different routes
@@ -2178,15 +2136,12 @@ public class GraphHopperTest {
 
     @Test
     public void testForceCurbsides() {
-        final String profile = "my_profile";
-        final String vehicle = "car";
-
         GraphHopper h = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile(profile).setVehicle(vehicle).setTurnCosts(true));
+                setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car()));
         h.getCHPreparationHandler()
-                .setCHProfiles(new CHProfile(profile));
+                .setCHProfiles(new CHProfile("car"));
         h.importOrLoad();
 
         // depending on the curbside parameters we take very different routes
@@ -2239,7 +2194,7 @@ public class GraphHopperTest {
     private GHResponse calcCurbsidePath(GraphHopper hopper, GHPoint source, GHPoint target, List<String> curbsides, boolean force) {
         GHRequest req = new GHRequest(source, target);
         req.putHint(Routing.FORCE_CURBSIDE, force);
-        req.setProfile("my_profile");
+        req.setProfile("car");
         req.setCurbsides(curbsides);
         return hopper.route(req);
     }
@@ -2249,8 +2204,7 @@ public class GraphHopperTest {
         GraphHopper h = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile("my_profile").setVehicle("car").
-                        setTurnCosts(true).putHint(U_TURN_COSTS, 40));
+                setProfiles(TestProfiles.accessAndSpeed("my_profile", "car").setTurnCostsConfig(new TurnCostsConfig(List.of("motorcar", "motor_vehicle"), 40)));
         h.getCHPreparationHandler()
                 .setCHProfiles(new CHProfile("my_profile"));
         h.importOrLoad();
@@ -2263,7 +2217,7 @@ public class GraphHopperTest {
         // we reach the target. at the start location we do a u-turn at the crossing with the *steps* ('ghost junction')
         req.setCurbsides(Arrays.asList("right", "right"));
         GHResponse res = h.route(req);
-        assertFalse(res.hasErrors(), "routing should not fail");
+        assertFalse(res.hasErrors(), "routing should not fail but had errors: " + res.getErrors());
         assertEquals(242.5, res.getBest().getRouteWeight(), 0.1);
         assertEquals(1917, res.getBest().getDistance(), 1);
         assertEquals(243000, res.getBest().getTime(), 1000);
@@ -2274,7 +2228,7 @@ public class GraphHopperTest {
         final String profile = "profile";
         GraphHopper hopper = new GraphHopper();
         hopper.setOSMFile(BAYREUTH).
-                setProfiles(new Profile(profile).setVehicle("car")).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car")).
                 setGraphHopperLocation(GH_LOCATION);
         hopper.importOrLoad();
 
@@ -2352,7 +2306,7 @@ public class GraphHopperTest {
         GraphHopper h = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(MONACO).
-                setProfiles(new Profile("car").setVehicle("car"));
+                setProfiles(TestProfiles.accessAndSpeed("car"));
         if (elevation)
             h.setElevationProvider(new SRTMProvider(DIR));
         h.importOrLoad();
@@ -2395,9 +2349,7 @@ public class GraphHopperTest {
     @Test
     public void testNoLoad() {
         String profile = "profile";
-        String vehicle = "car";
-        final GraphHopper hopper = new GraphHopper().
-                setProfiles(new Profile(profile).setVehicle(vehicle));
+        final GraphHopper hopper = new GraphHopper().setProfiles(TestProfiles.constantSpeed(profile));
         IllegalStateException e = assertThrows(IllegalStateException.class, () -> hopper.route(new GHRequest(42, 10.4, 42, 10).setProfile(profile)));
         assertTrue(e.getMessage().startsWith("Do a successful call to load or importOrLoad before routing"), e.getMessage());
     }
@@ -2405,15 +2357,13 @@ public class GraphHopperTest {
     @Test
     public void connectionNotFound() {
         final String profile = "profile";
-        final String vehicle = "car";
-
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile(BAYREUTH).
-                setProfiles(new Profile("profile").setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car")).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler()
-                .setCHProfiles(new CHProfile("profile"));
+                .setCHProfiles(new CHProfile(profile));
         hopper.setMinNetworkSize(0);
         hopper.importOrLoad();
         // here from and to both snap to small subnetworks that are disconnected from the main graph and
@@ -2439,7 +2389,7 @@ public class GraphHopperTest {
             }.
                     setGraphHopperLocation(GH_LOCATION).
                     setOSMFile(BAYREUTH).
-                    setProfiles(new Profile("profile")).
+                    setProfiles(new Profile("profile").setCustomModel(new CustomModel().addToSpeed(If("true", LIMIT, "100")))).
                     setElevation(true).
                     setStoreOnFlush(true);
             hopper.importOrLoad();
@@ -2455,7 +2405,7 @@ public class GraphHopperTest {
                     super.interpolateBridgesTunnelsAndFerries();
                 }
             }.
-                    setProfiles(new Profile("profile")).
+                    setProfiles(new Profile("profile").setCustomModel(new CustomModel().addToSpeed(If("true", LIMIT, "100")))).
                     setElevation(true).
                     setGraphHopperLocation(GH_LOCATION);
             hopper.load();
@@ -2466,11 +2416,10 @@ public class GraphHopperTest {
     @Test
     public void issue2306_1() {
         final String profile = "profile";
-        final String vehicle = "car";
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile("../map-matching/files/leipzig_germany.osm.pbf").
-                setProfiles(new Profile("profile").setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car")).
                 setMinNetworkSize(200);
         hopper.importOrLoad();
         Weighting weighting = hopper.createWeighting(hopper.getProfile(profile), new PMap());
@@ -2489,11 +2438,10 @@ public class GraphHopperTest {
         // is a meta-parameter that could go away at some point, I say that _if_ we find a match,
         // it should be a close one. (And not a far away one, as happened in issue2306.)
         final String profile = "profile";
-        final String vehicle = "car";
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile("../map-matching/files/leipzig_germany.osm.pbf").
-                setProfiles(new Profile("profile").setVehicle(vehicle)).
+                setProfiles(TestProfiles.accessAndSpeed(profile, "car")).
                 setMinNetworkSize(200);
         hopper.importOrLoad();
         Weighting weighting = hopper.createWeighting(hopper.getProfile(profile), new PMap());
@@ -2509,11 +2457,11 @@ public class GraphHopperTest {
         GraphHopper hopper = new GraphHopper().
                 setGraphHopperLocation(GH_LOCATION).
                 setOSMFile("../map-matching/files/leipzig_germany.osm.pbf").
-                setVehiclesString("car|block_private=false").
+                setEncodedValuesString("car_access|block_private=false,road_access").
                 setProfiles(
-                        new Profile("car").setVehicle("car"),
-                        new Profile("bike").setVehicle("bike"),
-                        new Profile("foot").setVehicle("foot")
+                        TestProfiles.accessAndSpeed("car"),
+                        TestProfiles.accessSpeedAndPriority("bike"),
+                        TestProfiles.accessSpeedAndPriority("foot")
                 ).
                 setMinNetworkSize(0);
         hopper.importOrLoad();
@@ -2594,7 +2542,7 @@ public class GraphHopperTest {
             rsp = hopper.route(new GHRequest(51.327411, 12.429598, 51.32723, 12.429979).
                     setCustomModel(new CustomModel().addToPriority(If("road_access == PRIVATE", MULTIPLY, "0"))).
                     setProfile("car"));
-            assertFalse(rsp.hasErrors());
+            assertFalse(rsp.hasErrors(), rsp.getErrors().toString());
             assertEquals(20, rsp.getBest().getDistance(), 1);
         }
     }
@@ -2602,12 +2550,12 @@ public class GraphHopperTest {
     @Test
     public void germanyCountryRuleAvoidsTracks() {
         final String profile = "profile";
+        Profile p = TestProfiles.accessAndSpeed(profile, "car");
+        p.getCustomModel().addToPriority(If("road_access == DESTINATION", MULTIPLY, ".1"));
 
         // first we try without country rules (the default)
         GraphHopper hopper = new GraphHopper()
-                .setProfiles(new Profile(profile)
-                        .setCustomModel(new CustomModel().addToPriority(If("road_access == DESTINATION", MULTIPLY, ".1")))
-                        .setVehicle("car"))
+                .setProfiles(p)
                 .setCountryRuleFactory(null)
                 .setGraphHopperLocation(GH_LOCATION)
                 .setOSMFile(BAYREUTH);
@@ -2623,9 +2571,7 @@ public class GraphHopperTest {
         // this time we enable country rules
         hopper.clean();
         hopper = new GraphHopper()
-                .setProfiles(new Profile(profile)
-                        .setCustomModel(new CustomModel().addToPriority(If("road_access == DESTINATION", MULTIPLY, ".1")))
-                        .setVehicle("car"))
+                .setProfiles(p)
                 .setGraphHopperLocation(GH_LOCATION)
                 .setCountryRuleFactory(new CountryRuleFactory())
                 .setOSMFile(BAYREUTH);
@@ -2641,10 +2587,8 @@ public class GraphHopperTest {
 
     @Test
     void curbsideWithSubnetwork_issue2502() {
-        final String profile = "profile";
         GraphHopper hopper = new GraphHopper()
-                .setProfiles(new Profile(profile).setVehicle("car").setTurnCosts(true)
-                        .setTurnCosts(true).putHint(U_TURN_COSTS, 80))
+                .setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car()))
                 .setGraphHopperLocation(GH_LOCATION)
                 .setMinNetworkSize(200)
                 .setOSMFile(DIR + "/one_way_dead_end.osm.pbf");
@@ -2654,7 +2598,7 @@ public class GraphHopperTest {
         {
             // A->B
             GHRequest request = new GHRequest(pointA, pointB);
-            request.setProfile(profile);
+            request.setProfile("car");
             request.setCurbsides(Arrays.asList("right", "right"));
             GHResponse response = hopper.route(request);
             assertFalse(response.hasErrors(), response.getErrors().toString());
@@ -2667,7 +2611,7 @@ public class GraphHopperTest {
             // when the curbside constraints are evaluated. this should make the snap a tower snap such that the curbside
             // constraint won't result in a connection not found error
             GHRequest request = new GHRequest(pointB, pointA);
-            request.setProfile(profile);
+            request.setProfile("car");
             request.setCurbsides(Arrays.asList("right", "right"));
             GHResponse response = hopper.route(request);
             assertFalse(response.hasErrors(), response.getErrors().toString());
@@ -2678,9 +2622,8 @@ public class GraphHopperTest {
 
     @Test
     void averageSpeedPathDetailBug() {
-        final String profile = "profile";
         GraphHopper hopper = new GraphHopper()
-                .setProfiles(new Profile(profile).setVehicle("car").setTurnCosts(true).putHint(U_TURN_COSTS, 80))
+                .setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car()))
                 .setGraphHopperLocation(GH_LOCATION)
                 .setMinNetworkSize(200)
                 .setOSMFile(BAYREUTH);
@@ -2689,7 +2632,7 @@ public class GraphHopperTest {
         GHPoint pointB = new GHPoint(50.019935, 11.500567);
         GHPoint pointC = new GHPoint(50.022027, 11.498255);
         GHRequest request = new GHRequest(Arrays.asList(pointA, pointB, pointC));
-        request.setProfile(profile);
+        request.setProfile("car");
         request.setPathDetails(Collections.singletonList("average_speed"));
         // this used to fail, because we did not wrap the weighting for query graph and so we tried calculating turn costs for virtual nodes
         GHResponse response = hopper.route(request);
@@ -2700,9 +2643,8 @@ public class GraphHopperTest {
 
     @Test
     void timeDetailBug() {
-        final String profile = "profile";
         GraphHopper hopper = new GraphHopper()
-                .setProfiles(new Profile(profile).setVehicle("car").setTurnCosts(true).putHint(U_TURN_COSTS, 80))
+                .setProfiles(TestProfiles.accessAndSpeed("car").setTurnCostsConfig(TurnCostsConfig.car()))
                 .setGraphHopperLocation(GH_LOCATION)
                 .setMinNetworkSize(200)
                 .setOSMFile(BAYREUTH);
@@ -2711,7 +2653,7 @@ public class GraphHopperTest {
                 new GHPoint(50.020838, 11.494918),
                 new GHPoint(50.024795, 11.498973),
                 new GHPoint(50.023141, 11.496441)));
-        request.setProfile(profile);
+        request.setProfile("car");
         request.getHints().putObject("instructions", true);
         request.setPathDetails(Arrays.asList("distance", "time"));
         GHResponse response = hopper.route(request);
@@ -2751,8 +2693,8 @@ public class GraphHopperTest {
     public void testLoadGraph_implicitEncodedValues_issue1862() {
         GraphHopper hopper = new GraphHopper()
                 .setProfiles(
-                        new Profile("p_car").setVehicle("car"),
-                        new Profile("p_bike").setVehicle("bike")
+                        TestProfiles.constantSpeed("p_car"),
+                        TestProfiles.constantSpeed("p_bike")
                 )
                 .setGraphHopperLocation(GH_LOCATION)
                 .setOSMFile(BAYREUTH);
@@ -2760,26 +2702,23 @@ public class GraphHopperTest {
         int nodes = hopper.getBaseGraph().getNodes();
         hopper.close();
 
-        // load without configured graph.vehicles
-        hopper = new GraphHopper();
-        hopper.setProfiles(Arrays.asList(
-                new Profile("p_car").setVehicle("car"),
-                new Profile("p_bike").setVehicle("bike"))
-        );
-        hopper.setGraphHopperLocation(GH_LOCATION);
+        hopper = new GraphHopper()
+                .setProfiles(
+                        TestProfiles.constantSpeed("p_car"),
+                        TestProfiles.constantSpeed("p_bike")
+                )
+                .setGraphHopperLocation(GH_LOCATION);
         assertTrue(hopper.load());
         hopper.getBaseGraph();
         assertEquals(nodes, hopper.getBaseGraph().getNodes());
         hopper.close();
 
-        // load via explicitly configured graph.vehicles
-        hopper = new GraphHopper();
-        hopper.setVehiclesString("car,bike");
-        hopper.setProfiles(Arrays.asList(
-                new Profile("p_car").setVehicle("car"),
-                new Profile("p_bike").setVehicle("bike"))
-        );
-        hopper.setGraphHopperLocation(GH_LOCATION);
+        hopper = new GraphHopper()
+                .setProfiles(
+                        TestProfiles.constantSpeed("p_car"),
+                        TestProfiles.constantSpeed("p_bike")
+                )
+                .setGraphHopperLocation(GH_LOCATION);
         assertTrue(hopper.load());
         assertEquals(nodes, hopper.getBaseGraph().getNodes());
         hopper.close();
@@ -2789,20 +2728,20 @@ public class GraphHopperTest {
     void testLoadingWithAnotherSpeedFactorWorks() {
         {
             GraphHopper hopper = new GraphHopper()
-                    .setVehiclesString("car|speed_factor=3")
-                    .setProfiles(new Profile("car").setVehicle("car"))
+                    .setEncodedValuesString("car_average_speed|speed_factor=3")
+                    .setProfiles(TestProfiles.accessAndSpeed("car"))
                     .setGraphHopperLocation(GH_LOCATION)
                     .setOSMFile(BAYREUTH);
             hopper.importOrLoad();
         }
         {
-            // now we use another speed_factor, but changing the flag encoder string has no effect when we are loading
+            // now we use another speed_factor, but changing the encoded value string has no effect when we are loading
             // a graph. This API is a bit confusing, but we have been mixing configuration options that only matter
             // during import with those that only matter when routing for some time already. At some point we should
             // separate the 'import' from the 'routing' config (and split the GraphHopper class).
             GraphHopper hopper = new GraphHopper()
-                    .setVehiclesString("car|speed_factor=9")
-                    .setProfiles(new Profile("car").setVehicle("car"))
+                    .setEncodedValuesString("car_average_speed|speed_factor=9")
+                    .setProfiles(TestProfiles.accessAndSpeed("car"))
                     .setGraphHopperLocation(GH_LOCATION);
             hopper.load();
             assertEquals(2969, hopper.getBaseGraph().getNodes());
@@ -2810,4 +2749,3 @@ public class GraphHopperTest {
     }
 
 }
-
